fixing gap clients-logo-container

--- a/style.css
+++ b/style.css
@@ -1814,7 +1814,7 @@ a,
     width: 78.3vw;
     height: 30vw;
     flex-wrap: wrap;
-    gap: 1vw 5vw;
+    gap: 1vw 0vw;
     margin: 1.5vw 10.3vw;
     background-color: var(--color-gray);
     clip-path: polygon(0 0, 100% 0, 100% 94%, 98% 100%, 0 100%);
